DMS-181 fixes different spacing in bread crumb separator

--- a/src/main/resources/META-INF/resources/scss/base/_breadcrumb.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_breadcrumb.scss
@@ -15,11 +15,14 @@
     background-color: $color-light-blue;
 }
 
-.breadcrumb-item + .breadcrumb-item::before {
+.breadcrumb-item + .breadcrumb-item {
+  padding-left: 0.2rem;
+  &::before {
     display: inline-block;
-    padding-right: 0.5rem;
-    content: "/";
+    padding-right: 0.2rem;
+    content: "\00a0\002f";
     color: white;
+  }
 }
 
 .breadcrumb-item, .breadcrumb-item > a {
